--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 id="horas">o</h1>
+    <h1 id="título">Horáio atual:</h1>
+    <h1 id="horario"></h1>
 
     <script src="script.js"></script>
 </body>
